--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <div class="container">
     <header>
       <nav>
-        <img src="images/logo-1.svg" alt="logo" class="top-logo">
-        <input type="button" value="Try It Free" class="btn-top">
+        <img src="images/logo-1.svg" alt="Huddle" class="top-logo">
+        <button type="submit" class="btn-top">Try It Free</button>
       </nav>
 
       <div class="text space">
@@ -33,10 +33,10 @@
           <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
             Create connections with your users as you engage in genuine discussion.</p>
 
-          <input type="button" value="Get Started For Free" class="btn">
+          <button type="submit" class="btn">Get Started For Free</button>
         </div>
 
-        <img src="images/illustration-mockups.svg" alt="illustration" class="illustration-top">
+        <img src="images/illustration-mockups.svg" alt="" aria-hidden="true" class="illustration-top">
       </div>
     </header>
 
@@ -48,11 +48,11 @@
           <p>Generate meaningful discussions with your audience and build a strong, loyal community.
             Think of the insightful conversations you miss out on with a feedback form.</p>
         </div>
-        <img src="images/illustration-grow-together.svg" alt="growth" class="illustration">
+        <img src="images/illustration-grow-together.svg" alt="" aria-hidden="true" class="illustration">
       </div>
 
       <div class="text box-2">
-        <img src="images/illustration-flowing-conversation.svg" alt="flow-of-conversation" class="illustration">
+        <img src="images/illustration-flowing-conversation.svg" alt="" aria-hidden="true" class="illustration">
         <div class="conversation">
           <h3>Flowing Conversations</h3>
 
@@ -68,7 +68,7 @@
           <p>It takes no time at all to integrate Huddle with your app's authentication solution.
             This means, once signed in to your app, your users can start chatting immediately.</p>
         </div>
-        <img src="images/illustration-your-users.svg" alt="users" class="illustration">
+        <img src="images/illustration-your-users.svg" alt="" aria-hidden="true" class="illustration">
       </div>
     </main>
 
@@ -76,26 +76,26 @@
       <div class="float">
         <h2>Ready To Build Your Community?</h2>
 
-        <input type="submit" value="Get Started For Free" class="btn-float">
+        <button type="submit" class="btn-float">Get Started For Free</button>
       </div>
     </div>
 
     <footer>
       <div class="footer">
-        <img src="images/logo-1 copy.svg" alt="logo" class="top-logo">
+        <img src="images/logo-1 copy.svg" alt="Huddle" class="top-logo">
         <div class="address">
           <div class="para">
-            <img src="images/icon-location.svg" alt="icon-location" class="location">
+            <img src="images/icon-location.svg" alt="" aria-hidden="true" class="location">
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua</span>
+              incididunt ut labore et dolore magna aliqua</span>
           </div>
 
           <div class="phone">
-            <img src="images/icon-phone.svg" alt="icon-phone">
+            <img src="images/icon-phone.svg" alt="" aria-hidden="true">
             <span>+1-543-123-4567</span>
           </div>
           <div class="email">
-            <img src="images/icon-email.svg" alt="icon-email">
+            <img src="images/icon-email.svg" alt="" aria-hidden="true">
             <span>example@huddle.com</span>
           </div>
         </div>
@@ -119,9 +119,9 @@
 
       <div class="socials">
         <ul>
-          <li><i class="fab fa-facebook"></i></li>
-          <li><i class="fab fa-twitter"></i></li>
-          <li><i class="fab fa-instagram"></i></li>
+          <li><a href="#" aria-label="facebook"><i class="fab fa-facebook"></i></a></li>
+          <li><a href="#" aria-label="twitter"><i class="fab fa-twitter"></i></a></li>
+          <li><a href="#" aria-label="instagram"><i class="fab fa-instagram"></i></a></li>
         </ul>
         <span class="copyright">
           &copy; Copyright 2018 Huddle. All rights reserved.
